<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.nempyxa.mathtr.ui.SettingsFragment" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/major_medium"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingStart="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/view_margin_vertical"
        android:paddingEnd="@dimen/activity_horizontal_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        tools:context=".ui.SettingsFragment">

        <LinearLayout
            android:id="@+id/left_argument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_margin_horizontal"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/view_margin_horizontal"
                    android:layout_weight="1"
                    android:text="@string/interval_start" />

                <EditText
                    android:id="@+id/edittext_left_min"
                    style="@style/TextView.Regular.Settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:cursorVisible="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/min"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                style="@style/TextView.Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/comma" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margin_horizontal"
                android:layout_weight="10"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edittext_left_max"
                    style="@style/TextView.Regular.Settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/view_margin_horizontal"
                    android:layout_weight="7"
                    android:cursorVisible="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/max"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/TextView.Regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/interval_end" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/operations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_vertical"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_argument">

            <Button
                android:id="@+id/addition"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_margin_horizontal"
                android:checkable="true"
                android:checked="true"
                android:text="@string/addition" />

            <Button
                android:id="@+id/subtraction"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_margin_horizontal"
                android:checkable="true"
                android:text="@string/subtraction" />

            <Button
                android:id="@+id/multiplication"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_margin_horizontal"
                android:checkable="true"
                android:text="@string/multiplication" />

            <Button
                android:id="@+id/division"
                style="@style/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/division" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_argument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operations">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_margin_horizontal"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView.Regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/view_margin_horizontal"
                    android:layout_weight="1"
                    android:text="@string/interval_start" />

                <EditText
                    android:id="@+id/edittext_right_min"
                    style="@style/TextView.Regular.Settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:cursorVisible="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/min"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                style="@style/TextView.Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/comma" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margin_horizontal"
                android:layout_weight="10"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edittext_right_max"
                    style="@style/TextView.Regular.Settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/view_margin_horizontal"
                    android:layout_weight="7"
                    android:cursorVisible="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/max"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/TextView.Regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/interval_end" />
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="right_argument,guideline" />

        <com.nempyxa.mathtr.ui.NumericKeypadView
            android:id="@+id/numeric_keypad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/view_margin_vertical_big"
            android:layout_marginBottom="@dimen/view_margin_vertical_big"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:contentSize="@dimen/text_size_regular"
            app:layout_constraintBottom_toTopOf="@+id/buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:showNext="false"
            app:spacingHorizontal="@dimen/numpad_small_spacing_horizontal"
            app:spacingVertical="@dimen/numpad_small_spacing_vertical" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numeric_keypad">

            <Button
                android:id="@+id/button_discard"
                style="@style/Button"
                android:layout_marginEnd="@dimen/view_margin_horizontal"
                android:onClick="@{listener::discard}"
                app:backgroundTint="@color/red"
                app:icon="@drawable/ic_discard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_apply"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_apply"
                style="@style/Button"
                android:layout_marginStart="@dimen/view_margin_horizontal"
                android:onClick="@{listener::apply}"
                app:backgroundTint="@color/green"
                app:icon="@drawable/ic_apply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/button_discard"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>